service-mesh/resources/client-jwt-group.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: itemacon-client-jwt-group-deployment
  labels:
    app: itemacon-client-jwt-group
spec:
  replicas: 1
  selector:
    matchLabels:
      app: itemacon-client-jwt-group
  template:
    metadata:
      labels:
        app: itemacon-client-jwt-group
    spec:
      containers:
        - name: itemacon-client-jwt-group
          image: ghcr.io/itema-as/service-mesh-in-practice-client
          ports:
            - containerPort: 8080
