service-mesh/resources/client-sa.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: itemacon-client-serviceaccount-deployment
  labels:
    app: itemacon-client-sa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: itemacon-client-sa
  template:
    metadata:
      labels:
        app: itemacon-client-sa
    spec:
      serviceAccountName: sa-service-client
      containers:
        - name: itemacon-client-sa
          image: jafossum/itemacon-client
          ports:
            - containerPort: 8080
