service-mesh/resources/server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: itemacon-server-deployment-v1
  labels:
    app: itemacon-server-v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: itemacon-server
  template:
    metadata:
      labels:
        app: itemacon-server
        version: v1
    spec:
      containers:
        - name: itemacon-server-v1
          image: ghcr.io/itema-as/service-mesh-in-practice-server
          ports:
            - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: itemacon-server-service
spec:
  selector:
    app: itemacon-server
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
