service-mesh/resources/vs-retry-canary.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: itemacon-vs-server
spec:
  hosts:
    - itemacon-server-service.default.svc.cluster.local
  http:
    - retries:
        attempts: 5
        perTryTimeout: 2s
        retryOn: 5xx
      route:
        - destination:
            host: itemacon-server-service.default.svc.cluster.local
            subset: v1
          weight: 90
        - destination:
            host: itemacon-server-service.default.svc.cluster.local
            subset: v2
          weight: 10

---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: itemacon-server
spec:
  host: itemacon-server-service.default.svc.cluster.local
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
