service-mesh/resources/vs-retry-failure.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: itemacon-vs-server
spec:
  hosts:
    - itemacon-server-service.default.svc.cluster.local
  http:
    - retries:
        attempts: 3
        perTryTimeout: 2s
        retryOn: 5xx
      route:
        - destination:
            host: itemacon-server-service.default.svc.cluster.local
    - fault:
        delay:
          percentage:
            value: 10
          fixedDelay: 5s
      route:
        - destination:
            host: itemacon-server-service.default.svc.cluster.local
