service-mesh/resources/vs-retry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: itemacon-vs-server
spec:
  hosts:
    - itemacon-server-service.default.svc.cluster.local
  http:
    - route:
        - destination:
            host: itemacon-server-service.default.svc.cluster.local
      retries:
        attempts: 3
        perTryTimeout: 2s
        retryOn: 5xx
