service-mesh/resources/auth-policy-jwt-group.yaml
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: jwt-auth-enable
spec:
  selector:
    matchLabels:
      app: itemacon-server
  jwtRules:
    - issuer: "testing@secure.istio.io"
      jwksUri: "https://raw.githubusercontent.com/istio/istio/release-1.11/security/tools/jwt/samples/jwks.json"
      forwardOriginalToken: true

---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: client-service-auth
spec:
  selector:
    matchLabels:
      app: itemacon-server
  action: ALLOW
  rules:
    - from:
        - source:
            requestPrincipals:
              ["testing@secure.istio.io/testing@secure.istio.io"]
      when:
        - key: request.auth.claims[groups]
          values: ["group1"]
