service-mesh/resources/client-jwt.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: deny-all
spec: {}

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: itemacon-client-jwt-deployment
  labels:
    app: itemacon-client-jwt
spec:
  replicas: 1
  selector:
    matchLabels:
      app: itemacon-client-jwt
  template:
    metadata:
      labels:
        app: itemacon-client-jwt
    spec:
      containers:
        - name: itemacon-client-jwt
          image: jafossum/itemacon-client
          ports:
            - containerPort: 8080
